--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,17 +14,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      
       - name: Use Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: '16.x' # You might need to adjust this value to your own version
+          node-version: "20.x" # You might need to adjust this value to your own version
+
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9.4.0
       - name: Build
         id: build
         env:
           GITHUBAUTHENTICATIONTOKEN: ${{ secrets.GITHUBAUTHENTICATIONTOKEN }}
         run: |
-          npm i && npm run build
+          pnpm i && pnpm run build
           mkdir ${{ env.PLUGIN_NAME }}
           cp README.md package.json icon.png ${{ env.PLUGIN_NAME }}
           mv dist ${{ env.PLUGIN_NAME }}
