--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "buffer": "^6.0.3",
-    "parcel": "^2.0.0"
+    "parcel": "^2.0.0",
+    "process": "^0.11.10"
   }
 }
